--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");
 
+.app-main {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
 .player-container {
   text-align: center;
   font-family: "Aldrich", system-ui;
   background-color: #d87dcb;
   padding: 5px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.player-container:hover {
+  background-color: #d87d9d;
+}
+
+.player-card {
+  width: 100%;
+  height: 50vh;
+  background-color: #cbd87d;
 }
