--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,16 @@
 .player-card {
   width: 100%;
   height: 50vh;
-  background-color: #cbd87d;
+  background-color: #d87dcb;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -moz-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.player-main {
+  padding: 10px;
+}
+
+.control-icon {
 }
