--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@
   width: 200px;
   aspect-ratio: 1/1;
   border-radius: 50%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .image-container {
